src/objects/Contract__x.object
<CustomObject>
    <externalDataSource>Legacy_Quintiles</externalDataSource>
    <externalName>Contract</externalName>
    <fields>
        <fullName>AN_other_discount_explanation_c__c</fullName>
        <externalDeveloperName>AN_other_discount_explanation__c</externalDeveloperName>
        <label>AN other discount explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AN_other_discount_included_c__c</fullName>
        <externalDeveloperName>AN_other_discount_included__c</externalDeveloperName>
        <label>AN other discount included?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <externalDeveloperName>AccountId</externalDeveloperName>
        <label>Account ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivatedById__c</fullName>
        <externalDeveloperName>ActivatedById</externalDeveloperName>
        <label>Activated By ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivatedDate__c</fullName>
        <externalDeveloperName>ActivatedDate</externalDeveloperName>
        <label>Activated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Contract_Value_c__c</fullName>
        <externalDeveloperName>Actual_Contract_Value__c</externalDeveloperName>
        <inlineHelpText>This value should reflect the total Labor of the Lead Business Group</inlineHelpText>
        <label>Actual Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Addendum_Number_from_Tracker_c__c</fullName>
        <externalDeveloperName>Addendum_Number_from_Tracker__c</externalDeveloperName>
        <label>Addendum Number from Tracker</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Requests_to_Regulatory_Reqs_c__c</fullName>
        <externalDeveloperName>Additional_Requests_to_Regulatory_Reqs__c</externalDeveloperName>
        <label>Additional Requests to Regulatory Reqs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_discount_explanation_c__c</fullName>
        <externalDeveloperName>Additional_discount_explanation__c</externalDeveloperName>
        <label>Additional discount explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_discounts_included_c__c</fullName>
        <externalDeveloperName>Additional_discounts_included__c</externalDeveloperName>
        <label>Additional discounts included?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreed_delivery_timeline_c__c</fullName>
        <externalDeveloperName>Agreed_delivery_timeline__c</externalDeveloperName>
        <label>Agreed delivery timeline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreed_upon_delivery_timeline_with_Cust__c</fullName>
        <externalDeveloperName>Agreed_upon_delivery_timeline_with_Cust__c</externalDeveloperName>
        <label>Agreed upon delivery timeline with Cust?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allowed_fluctuation_range_c__c</fullName>
        <externalDeveloperName>Allowed_fluctuation_range__c</externalDeveloperName>
        <label>Budget value required to trigger</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amendment_No_from_Tracker_c__c</fullName>
        <externalDeveloperName>Amendment_No_from_Tracker__c</externalDeveloperName>
        <label>Amendment No from Tracker</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amendment_Notes_c__c</fullName>
        <externalDeveloperName>Amendment_Notes__c</externalDeveloperName>
        <label>Amendment Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amendment_Reason_c__c</fullName>
        <externalDeveloperName>Amendment_Reason__c</externalDeveloperName>
        <label>Amendment Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amendment_Update_c__c</fullName>
        <externalDeveloperName>Amendment_Update__c</externalDeveloperName>
        <label>Amendment Update</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Analyst_Start_Date_c__c</fullName>
        <externalDeveloperName>Analyst_Start_Date__c</externalDeveloperName>
        <label>Analyst Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anti_bribery_lang_incld_c__c</fullName>
        <externalDeveloperName>Anti_bribery_lang_incld__c</externalDeveloperName>
        <label>Anti-bribery lang incld?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approximate_Contract_Value_US_c__c</fullName>
        <externalDeveloperName>Approximate_Contract_Value_US__c</externalDeveloperName>
        <label>Approximate Contract Value US$</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Under $100K US</fullName>
                </value>
                <value>
                    <fullName>$100K to $500K US</fullName>
                </value>
                <value>
                    <fullName>$500K to $1M US</fullName>
                </value>
                <value>
                    <fullName>$1M to $5M US</fullName>
                </value>
                <value>
                    <fullName>$5M to $10M US</fullName>
                </value>
                <value>
                    <fullName>Over $10M US</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Archived_Box_c__c</fullName>
        <externalDeveloperName>Archived_Box__c</externalDeveloperName>
        <label>Archived Box#</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AstraZeneca_Operational_Model_c__c</fullName>
        <externalDeveloperName>AstraZeneca_Operational_Model__c</externalDeveloperName>
        <label>AstraZeneca Operational Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SCOUT</fullName>
                </value>
                <value>
                    <fullName>MARS A&amp;R</fullName>
                </value>
                <value>
                    <fullName>MARS Project Level Pricing</fullName>
                </value>
                <value>
                    <fullName>ECD non-CPU</fullName>
                </value>
                <value>
                    <fullName>ECD Wrap-around</fullName>
                </value>
                <value>
                    <fullName>ECD A&amp;R</fullName>
                </value>
                <value>
                    <fullName>RWLP-ECOSSE</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Award_Date_c__c</fullName>
        <externalDeveloperName>Award_Date__c</externalDeveloperName>
        <label>Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BillingAddress__c</fullName>
        <externalDeveloperName>BillingAddress</externalDeveloperName>
        <label>Billing Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BillingCity__c</fullName>
        <externalDeveloperName>BillingCity</externalDeveloperName>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <externalDeveloperName>BillingCountry</externalDeveloperName>
        <label>Billing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingGeocodeAccuracy__c</fullName>
        <externalDeveloperName>BillingGeocodeAccuracy</externalDeveloperName>
        <label>Billing Geocode Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillingLatitude__c</fullName>
        <externalDeveloperName>BillingLatitude</externalDeveloperName>
        <label>Billing Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingLongitude__c</fullName>
        <externalDeveloperName>BillingLongitude</externalDeveloperName>
        <label>Billing Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingPostalCode__c</fullName>
        <externalDeveloperName>BillingPostalCode</externalDeveloperName>
        <label>Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingState__c</fullName>
        <externalDeveloperName>BillingState</externalDeveloperName>
        <label>Billing State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStreet__c</fullName>
        <externalDeveloperName>BillingStreet</externalDeveloperName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Protocol_No_c__c</fullName>
        <externalDeveloperName>Billing_Protocol_No__c</externalDeveloperName>
        <label>Billing Protocol No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bios_P_U_Reg_Bios_Projects_c__c</fullName>
        <externalDeveloperName>Bios_P_U_Reg_Bios_Projects__c</externalDeveloperName>
        <label>DSSR - BIOS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Analyst_Assigned_c__c</fullName>
        <externalDeveloperName>Budget_Analyst_Assigned__c</externalDeveloperName>
        <label>Budget Analyst Assigned</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Annualized_Explanation_c__c</fullName>
        <externalDeveloperName>Budget_Annualized_Explanation__c</externalDeveloperName>
        <label>Budget Annualized Explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Annualized_c__c</fullName>
        <externalDeveloperName>Budget_Annualized__c</externalDeveloperName>
        <label>Budget Annualized</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Provided_to_PFM_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Budget_Provided_to_PFM__c</externalDeveloperName>
        <label>Budget Provided to PFM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Tool_c__c</fullName>
        <externalDeveloperName>Budget_Tool__c</externalDeveloperName>
        <label>Budget Tool</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No QIP</fullName>
                </value>
                <value>
                    <fullName>QIP</fullName>
                </value>
                <value>
                    <fullName>PSB</fullName>
                </value>
                <value>
                    <fullName>Proforma</fullName>
                </value>
                <value>
                    <fullName>PRISM</fullName>
                </value>
                <value>
                    <fullName>Bundled</fullName>
                </value>
                <value>
                    <fullName>Fee for Service</fullName>
                </value>
                <value>
                    <fullName>Fee for Service with Cap</fullName>
                </value>
                <value>
                    <fullName>Fixed Budget</fullName>
                </value>
                <value>
                    <fullName>Fixed Budget with Collar</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Q2 Vaccines</fullName>
                </value>
                <value>
                    <fullName>POP Spreadsheet</fullName>
                </value>
                <value>
                    <fullName>Unit Pricing Tool</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Type_c__c</fullName>
        <externalDeveloperName>Budget_Type__c</externalDeveloperName>
        <label>Budget Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bundled</fullName>
                </value>
                <value>
                    <fullName>Cost Plus Award</fullName>
                </value>
                <value>
                    <fullName>Cost Plus Fixed Fee</fullName>
                </value>
                <value>
                    <fullName>Fee for service</fullName>
                </value>
                <value>
                    <fullName>Fee for service with a cap</fullName>
                </value>
                <value>
                    <fullName>Fixed Budget</fullName>
                </value>
                <value>
                    <fullName>Fixed Budget with collar</fullName>
                </value>
                <value>
                    <fullName>Fixed price</fullName>
                </value>
                <value>
                    <fullName>Fixed Price for Fixed Scope</fullName>
                </value>
                <value>
                    <fullName>FSP - FTE</fullName>
                </value>
                <value>
                    <fullName>FSP - Units</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Time and Materials</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Version_c__c</fullName>
        <externalDeveloperName>Budget_Version__c</externalDeveloperName>
        <label>Budget Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_When_Confidence_Changed_to_High_c__c</fullName>
        <externalDeveloperName>Budget_When_Confidence_Changed_to_High__c</externalDeveloperName>
        <label>Budget When Confidence Changed to High</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_at_Customer_Minimum_Entry_Date_c__c</fullName>
        <externalDeveloperName>Budget_at_Customer_Minimum_Entry_Date__c</externalDeveloperName>
        <label>Budget at Customer Minimum Entry Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Budgetary_Impact_to_Third_Party_Vendor_c__c</fullName>
        <externalDeveloperName>Budgetary_Impact_to_Third_Party_Vendor__c</externalDeveloperName>
        <label>Budgetary Impact to Third Party Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bundled_Discounts_included_c__c</fullName>
        <externalDeveloperName>Bundled_Discounts_included__c</externalDeveloperName>
        <label>Bundled Discounts included?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bundled_discount_explanation_c__c</fullName>
        <externalDeveloperName>Bundled_discount_explanation__c</externalDeveloperName>
        <label>Bundled discount explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Development_c__c</fullName>
        <externalDeveloperName>Business_Development__c</externalDeveloperName>
        <label>Business Development</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Line_Grouping_c__c</fullName>
        <externalDeveloperName>Business_Line_Grouping__c</externalDeveloperName>
        <label>Business Line Grouping</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BypassValidationForProcessBuilder_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>BypassValidationForProcessBuilder__c</externalDeveloperName>
        <label>BypassValidationForProcessBuilder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDS_EDLS_Innovex_c__c</fullName>
        <externalDeveloperName>CDS_EDLS_Innovex__c</externalDeveloperName>
        <label>Division, Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Core Clinical</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
                <value>
                    <fullName>Outcome</fullName>
                </value>
                <value>
                    <fullName>Devices</fullName>
                </value>
                <value>
                    <fullName>Government/NGO</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Early Clinical Development</fullName>
                </value>
                <value>
                    <fullName>ECG</fullName>
                </value>
                <value>
                    <fullName>IVRS</fullName>
                </value>
                <value>
                    <fullName>Commercial Solutions</fullName>
                </value>
                <value>
                    <fullName>Medical Communications</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Capital Solutions</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Cardiac Safety</fullName>
                </value>
                <value>
                    <fullName>Health Engagement &amp; Communication</fullName>
                </value>
                <value>
                    <fullName>Lifecycle Safety</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CEVA_PHV_P_U_c__c</fullName>
        <externalDeveloperName>CEVA_PHV_P_U__c</externalDeveloperName>
        <label>DSSR - LCS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHO_c__c</fullName>
        <externalDeveloperName>CHO__c</externalDeveloperName>
        <label>CHO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>JPN</fullName>
                </value>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>LAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CNFs_Completed_Comments_c__c</fullName>
        <externalDeveloperName>CNFs_Completed_Comments__c</externalDeveloperName>
        <inlineHelpText>Additional context for whether there have been previously approved scope change requests (eg. CNF, CO Log, CORF, SCF, etc.)</inlineHelpText>
        <label>CNFs Completed - Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CNFs_Completed_c__c</fullName>
        <externalDeveloperName>CNFs_Completed__c</externalDeveloperName>
        <inlineHelpText>If this is a CO, have there been previously approved scope change requests (eg. CNF, CO Log, CORF, SCF, etc.)?</inlineHelpText>
        <label>CNFs Completed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COVID_19_Comments_c__c</fullName>
        <externalDeveloperName>COVID_19_Comments__c</externalDeveloperName>
        <inlineHelpText>Please add description of COVID-19 related scope change and date of request</inlineHelpText>
        <label>COVID-19 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>COVID_19_Impact_on_Study_c__c</fullName>
        <externalDeveloperName>COVID_19_Impact_on_Study__c</externalDeveloperName>
        <inlineHelpText>Has the Budget changed because of COVID-19?</inlineHelpText>
        <label>COVID-19 Impact on Study</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not confirmed</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CST_Additional_Information_c__c</fullName>
        <externalDeveloperName>CST_Additional_Information__c</externalDeveloperName>
        <label>zzCST Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cap_on_Damages_Exp_c__c</fullName>
        <externalDeveloperName>Cap_on_Damages_Exp__c</externalDeveloperName>
        <label>Cap on Damages Explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cap_on_Damages_c__c</fullName>
        <externalDeveloperName>Cap_on_Damages__c</externalDeveloperName>
        <label>Cap on Damages</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cardiac_Safety_Contract_Analyst_c__c</fullName>
        <externalDeveloperName>Cardiac_Safety_Contract_Analyst__c</externalDeveloperName>
        <label>CSS-CD Contract Analyst</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cardiac_Safety_Contract_Involvement_c__c</fullName>
        <externalDeveloperName>Cardiac_Safety_Contract_Involvement__c</externalDeveloperName>
        <label>CSS-CD Contract Involvement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Order_Language_Explanation_c__c</fullName>
        <externalDeveloperName>Change_Order_Language_Explanation__c</externalDeveloperName>
        <label>Change Order Language Explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Order_Language_c__c</fullName>
        <externalDeveloperName>Change_Order_Language__c</externalDeveloperName>
        <label>Change Order Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Order_Number_c__c</fullName>
        <externalDeveloperName>Change_Order_Number__c</externalDeveloperName>
        <label>Change Order Number</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Order_Parent_c__c</fullName>
        <externalDeveloperName>Change_Order_Parent__c</externalDeveloperName>
        <label>Change Order Parent</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Third_Party_Agreement_c__c</fullName>
        <externalDeveloperName>Client_Third_Party_Agreement__c</externalDeveloperName>
        <label>Client/Third Party Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clinical_Contract_number_c__c</fullName>
        <externalDeveloperName>Clinical_Contract_number__c</externalDeveloperName>
        <label>Clinical Contract number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_GBU_Asia_Pac_c__c</fullName>
        <externalDeveloperName>Clinical_GBU_Asia_Pac__c</externalDeveloperName>
        <label>Clinical - GBU - Asia Pac</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clinical_GBU_CESE_c__c</fullName>
        <externalDeveloperName>Clinical_GBU_CESE__c</externalDeveloperName>
        <label>Clinical - GBU - CESE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clinical_GBU_Jap_c__c</fullName>
        <externalDeveloperName>Clinical_GBU_Jap__c</externalDeveloperName>
        <label>Clinical - GBU - Jap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clinical_GBU_NA_c__c</fullName>
        <externalDeveloperName>Clinical_GBU_NA__c</externalDeveloperName>
        <label>Clinical - GBU - NA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clinical_GBU_NEMA_c__c</fullName>
        <externalDeveloperName>Clinical_GBU_NEMA__c</externalDeveloperName>
        <label>Clinical - GBU - NEMA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clinical_GBU_SA_c__c</fullName>
        <externalDeveloperName>Clinical_GBU_SA__c</externalDeveloperName>
        <label>Clinical - GBU - SA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>